enum Roles {
  // Give explicit values so changing the order in code won't mess things up!
  READ = 1,
  WRITE = 2,
  MANAGE = 3,
  ADMIN = 4,
}

export default Roles;
